# local-cloud

./: Cargo.toml  README.md
src/: cfg.yml  main.rs  models.rs  services.rs
src/default/: Golang.Dockerfile  Localcloud.Dockerfile  Nodejs.Dockerfile
src/default/nginx/: Dockerfile  Nginx80.Dockerfile  nginx.conf
src/local-cloud-web/: README.md  package-lock.json  package.json  quasar.config.js
src/local-cloud-web/src/layouts/: MainLayout.vue
src/local-cloud-web/src/pages/: BuildsPage.vue
src/local-cloud-web/src/router/: routes.js
src/models/: get_services.rs  result_code.rs
src/services/: config.rs  docker.rs  nginx.rs
