[package]
name = "local-cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "*"
actix-web = "4.3.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.95"
log = "0.4.17"
env_logger = "0.10.0"
tokio = "1.27.0"
tokio-postgres = "0.7.2"
reqwest = { version = "0.11.16", features = ["json"] }
chrono = "0.4.24"
async-std = "1.12.0"
rayon = "1.7.0"
futures = "0.3.28"
fs = "0.0.5"